[package]
name = "witcher"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
freedesktop-icons = "0.2"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
libc = "0.2"
niri-ipc = "=0.1.10"
resvg = "0.42"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smithay-client-toolkit = "0.19"
tiny-skia = "0.11"
wayland-client = "0.31"
